@@ -1,0 +1,23 @@
+# Copyright (c) 2005-2006 Anders Logg (logg@tti-c.org)
+# Licensed under the GNU GPL Version 2
+#
+# The bilinear form a(v, u) and Linear form L(v) for the Stokes
+# equations using a mixed formulation (equal-order stabilized).
+#
+# Compile this form with FFC: ffc Stokes.form
+
+scalar = FiniteElement("Lagrange", "triangle", 1)
+vector = FiniteElement("Vector Lagrange", "triangle", 1)
+system = vector + scalar
+
+(v, q) = BasisFunctions(system)
+(u, p) = BasisFunctions(system)
+
+f = Function(vector)
+h = Function(scalar)
+
+beta  = 0.1
+delta = beta*h*h
+
+a = (dot(grad(v), grad(u)) - div(v)*p + q*div(u) + delta*dot(grad(q), grad(p)))*dx
+L = dot(v + mult(delta, grad(q)), f)*dx
