@@ -1,4 +1,5 @@
- - Add new demo stokes (Taylor-Hood)
+ - Add new demo Stokes (equal-order stabilized)
+ - Add new demo Stokes (Taylor-Hood)
  - Add new parameter for KrylovSolvers: "monitor convergence"
  - Add conversion script dolfin-convert for various mesh formats
  - Add new demo elasticity
